--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+main{
+    width: 90vw;
+    margin: 0 auto;
+}
 .gridContainer {
+    display: grid;
     width: 400px;
     height: 400px;
     border: 2px solid black;
 }
 
 .gridCell {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
+    border: 1px solid black;
 }
